# Graphoptim-Code-Optimizer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  graphoptim_prompt.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmark_results/: benchmark_dataset.json  benchmark_report.md  raw_data.json  statistical_report.csv
benchmark_results/claude/: metrics.json  raw_data.json  report.md  statistical_report.csv
benchmark_results/gpt4o/: metrics.json  raw_data.json  report.md
benchmark_results/human/: metrics.json
docs/: Explanation.md
docs/wiki/: Adding-Passes.md  CLI-Reference.md  Home.md  How-It-Works.md  Installation.md  Quick-Start.md
graphoptim/: __init__.py  cli.py  config.py
graphoptim/analyzer/: __init__.py  metrics.py  patterns.py  reporter.py
graphoptim/benchmark/: __init__.py  collector.py  report.py  runner.py
graphoptim/benchmark/prompts/: realworld.json
graphoptim/optimizer/: __init__.py  rewriter.py
graphoptim/optimizer/passes/: __init__.py  centrality.py  constant_folding.py  dead_code.py  guard_clause.py  knapsack.py  path_shortener.py  unused_variable.py
graphoptim/parser/: __init__.py  ast_utils.py  cfg_builder.py  dfg_builder.py
tests/: test_cfg_builder.py  test_cli.py  test_constant_folding.py  test_dead_code.py  test_guard_clause.py  test_knapsack.py  test_metrics.py  test_redundant_paths.py  test_rewriter.py  test_unused_variable.py
