[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphoptim"
version = "0.1.0"
description = "Graph-theoretic structural optimizer for Python code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ai", "code-optimization", "graph-theory", "static-analysis", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "networkx>=3.0",
    "radon>=6.0",
    "scipy>=1.10",
    "pandas>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
benchmark = [
    "anthropic>=0.25",
    "openai>=1.0",
    "google-generativeai>=0.5",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
graphoptim = "graphoptim.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
